# LLM-Doc-QA

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run_backend.py  setup.py  start.py
backend/: config.py  gemini_client.py  main.py  models.py  pdf_processor.py  prompt_templates.py
frontend/: api_client.py  app.py  config.py
tests/: test_api.py  test_pdf_processor.py  test_prompt_templates.py
